NetBSD Problem Report #42177

From nakayosh@leto.eonet.ne.jp  Tue Oct 13 14:47:28 2009
Return-Path: <nakayosh@leto.eonet.ne.jp>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id EDA8763B877
	for <gnats-bugs@gnats.NetBSD.org>; Tue, 13 Oct 2009 14:47:27 +0000 (UTC)
Message-Id: <20091013124925.C03D41AF2BB@ae0000-mailauth14.eo.k-opti.ad.jp>
Date: Tue, 13 Oct 2009 21:49:25 +0900 (JST)
From: nakayosh@leto.eonet.ne.jp
Reply-To: nakayosh@leto.eonet.ne.jp
To: gnats-bugs@gnats.NetBSD.org
Subject: rogue/monster.c: typo `=' vs `=='
X-Send-Pr-Version: 3.95

>Number:         42177
>Category:       bin
>Synopsis:       rogue/monster.c: typo `=' vs `=='
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Oct 13 14:50:01 +0000 2009
>Closed-Date:    Mon Oct 19 02:35:32 +0000 2009
>Last-Modified:  Wed Dec 09 05:00:03 +0000 2009
>Originator:     NAKAJIMA Yoshihiro
>Release:        NetBSD-current/20091009
>Organization:
>Environment:
System: NetBSD asura 5.99.20 NetBSD 5.99.20 (ASURA) #7: Tue Oct 13 19:48:19 JST 2009 nakayosh@asura:/usr/src/sys/arch/amd64/compile/ASURA amd64
Architecture: x86_64
Machine: amd64
>Description:

There is a typo `=' vs `==' in rogue/monster.c. 

>How-To-Repeat:
>Fix:

Date: Tue Oct 13 21:34:46 JST 2009
diff -u src/games/rogue/monster.c.ORIG src/games/rogue/monster.c
--- src/games/rogue/monster.c.ORIG	2009-08-12 17:44:45.000000000 +0900
+++ src/games/rogue/monster.c	2009-10-13 21:13:47.000000000 +0900
@@ -1,4 +1,4 @@
-/*	$NetBSD: monster.c,v 1.15 2009/08/12 08:44:45 dholland Exp $	*/
+/*	$NetBSD$	*/

 /*
  * Copyright (c) 1988, 1993
@@ -679,7 +679,7 @@

 	for (i = 0; i < 9; i++) {
 		rand_around(i, &row, &col);
-		if (((row == rogue.row) && (col = rogue.col)) ||
+		if (((row == rogue.row) && (col == rogue.col)) ||
 				(row < MIN_ROW) || (row > (DROWS-2)) ||
 				(col < 0) || (col > (DCOLS-1))) {
 			continue;

>Release-Note:

>Audit-Trail:
From: "David A. Holland" <dholland@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42177 CVS commit: src/games/rogue
Date: Mon, 19 Oct 2009 02:34:40 +0000

 Module Name:	src
 Committed By:	dholland
 Date:		Mon Oct 19 02:34:40 UTC 2009

 Modified Files:
 	src/games/rogue: monster.c

 Log Message:
 Fix '=' for '==' in a test. From NAKAJIMA Yoshihiro in PR 42177.


 To generate a diff of this commit:
 cvs rdiff -u -r1.15 -r1.16 src/games/rogue/monster.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Mon, 19 Oct 2009 02:35:32 +0000
State-Changed-Why:
Fixed, thanks. (Good catch!)


From: Soren Jacobsen <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42177 CVS commit: [netbsd-5] src/games/rogue
Date: Wed, 9 Dec 2009 04:56:00 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Wed Dec  9 04:56:00 UTC 2009

 Modified Files:
 	src/games/rogue [netbsd-5]: monster.c

 Log Message:
 Pull up following revision(s) (requested by jdarrow in ticket #1186):
 	games/rogue/monster.c: revision 1.16
 Fix '=' for '==' in a test. From NAKAJIMA Yoshihiro in PR 42177.


 To generate a diff of this commit:
 cvs rdiff -u -r1.14 -r1.14.10.1 src/games/rogue/monster.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.