Fix '=' for '==' in a test. From NAKAJIMA Yoshihiro in PR 42177.